@@ -65,6 +65,8 @@ https://github.com/r-lib/R6
 dbConnection
 https://github.com/DavidPatShuiFong/dbConnection
 
+shinyjqui
+https://github.com/yang-tang/shinyjqui
 
 BSD-3
 =====
